fix: persist Debezium offset + schema history atomically (#175)
State was persisted as two separate, non-atomic KV puts (offset first,
then schema history). An ungraceful shutdown between the two writes left
a newer offset with stale/missing history, so on restart Debezium saw a
completed snapshot with no schema history and failed permanently with
"The db history topic is missing" (MySQL, SQL Server, Oracle, Db2).

Persist both states as a single combined KV entry (a Map with `offsets`
and `history` keys) written with one put(), so they can never desync.
Restore tries the combined key first and falls back to the two legacy
per-file keys, so existing deployments upgrade without a forced
re-snapshot and migrate on their next successful run.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>